--- a/app/src/main/res/layout-v26/activity_tela_de_cadastro.xml
+++ b/app/src/main/res/layout-v26/activity_tela_de_cadastro.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,27 +12,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:autofillHints="sd"
-            android:hint="@string/nome_str"
-            tools:ignore="UnusedAttribute" />
+            android:autofillHints="no"
+            android:hint="@string/nome_str"/>
 
         <EditText
             android:id="@+id/telefone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="phone"
-            android:autofillHints="sd"
-            android:hint="@string/nome_str"
-            tools:ignore="UnusedAttribute"/>
+            android:autofillHints="no"
+            android:hint="@string/telefone_str"/>
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:autofillHints="sd"
-            android:hint="@string/nome_str"
-            tools:ignore="UnusedAttribute" />
+            android:autofillHints="no"
+            android:hint="@string/email_str"/>
 
         <Button
             android:id="@+id/btn_salvar"
