--- a/app/src/main/res/menu/activity_formulario_menu_list.xml
+++ b/app/src/main/res/menu/activity_formulario_menu_list.xml
@@ -2,7 +2,7 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item"
+    <item android:title="@string/item_string"
         android:id="@+id/activity_menu_salvar"
         android:icon="@drawable/ic_save_black_24dp"
         app:showAsAction="always"
